--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
                 <p> <span id="copy-count"> 0 </span> Copy</p> 
             </button>
         </div>
-
     </div>
    </nav>
+
+   <div class="hero-section">
+     <div class="hero-logo">
+        <div><img src="assets/logo.png" alt=""></div>
+     </div>
+     <h1 class="hero-title">Emergency Service Directory</h1>
+     <p class="hero-description">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+   </div>
 
     
 </body>
