--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Hotline</title>
     <link rel="stylesheet" href="styles.css">
+     
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&family=Manrope:wght@200..800&display=swap');
+</style>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/3f6c07e3b2.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -35,8 +42,139 @@
         <div><img src="assets/logo.png" alt=""></div>
      </div>
      <h1 class="hero-title">Emergency Service Directory</h1>
-     <p class="hero-description">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+     <p class="hero-description">Government Emergency Services at Your Fingertip - A Project by  Government of the People's Republic of Bangladesh</p>
    </div>
+
+   <main class="main-container main-bg">
+       <section class="main-section">
+           <div class="cards-section">
+               <div class="img-icon">
+                   <img class="card-img" src="assets/emergency.png" alt="">
+                   <i class="fa-regular fa-heart"></i>
+               </div>
+               <h2 class="card-title">National Emergency Number</h2>
+               <p class="card-description">National Emergency</p>
+               <h2 class="call-nbr">999</h2>
+             <button class="category" >All</button>
+             <div>
+               <button class="copy-btn2"> <i class="fa-regular fa-copy "></i> Copy</button>
+               <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+           </div>
+           <div class="cards-section">
+               <div class="img-icon">
+                   <img class="card-img" src="assets/police.png" alt="">
+                   <i class="fa-regular fa-heart"></i>
+               </div>
+               <h2 class="card-title">Police Helpline Number</h2>
+               <p class="card-description">Police</p>
+               <h2 class="call-nbr">999</h2>
+             <button class="category" >Police</button>
+             <div>
+               <button class="copy-btn2"> <i class="fa-regular fa-copy "></i> Copy</button>
+               <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+           </div>
+           <div class="cards-section">
+               <div class="img-icon">
+                   <img class="card-img" src="assets/fire-service.png" alt="">
+                   <i class="fa-regular fa-heart"></i>
+               </div>
+               <h2 class="card-title">Fire Service Number</h2>
+               <p class="card-description">Fire Service</p>
+               <h2 class="call-nbr">999</h2>
+             <button class="category" >Fire</button>
+             <div>
+               <button class="copy-btn2"> <i class="fa-regular fa-copy "></i> Copy</button>
+               <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+           </div>
+           <div class="cards-section">
+               <div class="img-icon">
+                   <img class="card-img" src="assets/ambulance.png" alt="">
+                   <i class="fa-regular fa-heart"></i>
+               </div>
+               <h2 class="card-title">Ambulance Service</h2>
+               <p class="card-description">Ambulance</p>
+               <h2 class="call-nbr">1994-999999</h2>
+             <button class="category" >Health</button>
+             <div>
+               <button class="copy-btn2"> <i class="fa-regular fa-copy "></i> Copy</button>
+               <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+           </div>
+           <div class="cards-section">
+               <div class="img-icon">
+                   <img class="card-img" src="assets/emergency.png" alt="">
+                   <i class="fa-regular fa-heart"></i>
+               </div>
+               <h2 class="card-title">Women & Child Helpline</h2>
+               <p class="card-description">Women & Child Helpline</p>
+               <h2 class="call-nbr">109</h2>
+             <button class="category" >Help</button>
+             <div>
+               <button class="copy-btn2"> <i class="fa-regular fa-copy "></i> Copy</button>
+               <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+           </div>
+           <div class="cards-section">
+               <div class="img-icon">
+                   <img class="card-img" src="assets/emergency.png" alt="">
+                   <i class="fa-regular fa-heart"></i>
+               </div>
+               <h2 class="card-title">Anti-Corruption Helpline</h2>
+               <p class="card-description">Anti-Corruption</p>
+               <h2 class="call-nbr">106</h2>
+             <button class="category" >Govt.</button>
+             <div>
+               <button class="copy-btn2"> <i class="fa-regular fa-copy "></i> Copy</button>
+               <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+           </div>
+           <div class="cards-section">
+               <div class="img-icon">
+                   <img class="card-img" src="assets/emergency.png" alt="">
+                   <i class="fa-regular fa-heart"></i>
+               </div>
+               <h2 class="card-title">Electricity Helpline</h2>
+               <p class="card-description">Electricity Outage</p>
+               <h2 class="call-nbr">16216</h2>
+             <button class="category" >Electricity</button>
+             <div>
+               <button class="copy-btn2"> <i class="fa-regular fa-copy "></i> Copy</button>
+               <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+           </div>
+           <div class="cards-section">
+               <div class="img-icon">
+                   <img class="card-img" src="assets/emergency.png" alt="">
+                   <i class="fa-regular fa-heart"></i>
+               </div>
+               <h2 class="card-title">Brac Helpline</h2>
+               <p class="card-description">Brac</p>
+               <h2 class="call-nbr">16445</h2>
+             <button class="category" >NGO</button>
+             <div>
+               <button class="copy-btn2"> <i class="fa-regular fa-copy "></i> Copy</button>
+               <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+           </div>
+           <div class="cards-section">
+               <div class="img-icon">
+                   <img class="card-img" src="assets/emergency.png" alt="">
+                   <i class="fa-regular fa-heart"></i>
+               </div>
+               <h2 class="card-title">Bangladesh Railway Helpline </h2>
+               <p class="card-description">Bangladesh Railway</p>
+               <h2 class="call-nbr">163</h2>
+             <button class="category" >Travel</button>
+             <div>
+               <button class="copy-btn2"> <i class="fa-regular fa-copy "></i> Copy</button>
+               <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
+             </div>
+           </div>      
+        </section>
+   </main>
 
     
 </body>
