Add call history section with clear button and list container and some modify in card section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
            </div>
            <div class="cards-section">
                <div class="img-icon">
-                   <img class="card-img" src="assets/emergency.png" alt="">
+                   <img class="card-img" src="assets/brac.png" alt="">
                    <i class="fa-regular fa-heart"></i>
                </div>
                <h2 class="card-title">Brac Helpline</h2>
@@ -161,7 +161,7 @@
            </div>
            <div class="cards-section">
                <div class="img-icon">
-                   <img class="card-img" src="assets/emergency.png" alt="">
+                   <img class="card-img" src="assets/Bangladesh-Railway.png" alt="">
                    <i class="fa-regular fa-heart"></i>
                </div>
                <h2 class="card-title">Bangladesh Railway Helpline </h2>
@@ -173,6 +173,18 @@
                <button class="call-btn"> <i class="fa-solid fa-phone"></i> Call</button>
              </div>
            </div>      
+        </section>
+        <section class="right-column">
+            <div class="history-card">
+
+          <div class="history-header">
+            <h3> <i class="fa-regular fa-clock"></i> Call History</h3>
+            <button id="clear-history" class="clear-btn">Clear</button>
+          </div>
+
+          <ul id="history-list" class="history-list"> </ul>
+        </div>
+
         </section>
    </main>
 
